# Proyecto-programaci-n

./: README.md
Extra/FundamentosProgramacionBueno/: fileManager.c  main.c  userInfoManager.c
FundamentosProgramacionBueno/: CMakeLists.txt  fileManager.c  fileManager.h  main.c  userInfoManager.c  userInfoManager.h
Proyecto-programacion-main/mainC/: CMakeLists.txt  fileManager.c  userInfoManager.c  userInfoManager.h
ProyectoFundamentos/: CMakeLists.txt  fileManager.c  fileManager.h  main.c  userInfoManager.c  userInfoManager.h
ProyectoGTK/FundamentosProgramacionBueno/: CMakeLists.txt  fileManager.c  main.c  userInfoManager.c  userInfoManager.h
mainC/: CMakeLists.txt  fileManager.c  fileManager.h  main.c  userInfoManager.c  userInfoManager.h
